--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@ body {
 	font-family: "Poppins", sans-serif;
     margin-inline: 50px;
     background-color: #EDF2EE;
+    background-image: url('/public/BG.png');
+    background-size: 150px;
 }
 
 @layer base {
