--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 body {
+	margin-inline: 20px;
+	background-color: #edf2ee;
+	background-image: url("/public/BG.png");
+	background-size: 150px;
+}
+body html {
 	font-family: "Poppins", sans-serif;
-    margin-inline: 20px;
-    background-color: #EDF2EE;
-    background-image: url('/public/BG.png');
-    background-size: 150px;
 }
 
 @layer base {
-  :root {
+	:root {
 		--radius: 0.5rem;
 	}
 }
